<resources>
    <string name="app_name">TCSDK Test Platform</string>
    <string name="environment">Environment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_createCmd">Create Command</string>
    <string name="btn_logout">Logout</string>
    <string name="user_id">User ID</string>
    <string name="client_id">Client ID</string>
    <string name="command">Command</string>
    <string name="name_label">Name: </string>
    <string name="command_id_label">CommandID: </string>
    <string name="loading">loading...</string>
    <string name="file_write">File Write</string>
    <string name="file_read">File Read</string>
    <string-array name="env_array">
        <item>Dev</item>
        <item>Test</item>
        <item>Stage</item>
    </string-array>
</resources>
