<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <TextView
        android:text="@string/command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <TextView
            android:text="@string/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/name_val"
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <TextView
            android:text="@string/command_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/command_id_val"
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>