<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.yonomi.thincloud.tcsdktestplatform.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Username-->
            <RelativeLayout
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_username"
                    android:text="@string/username"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    />
                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_toEndOf="@id/label_username"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <!--Password-->
            <RelativeLayout
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_password"
                    android:text="@string/password"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_toEndOf="@id/label_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <!--Environment-->
            <RelativeLayout
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/environment"
                    android:id="@+id/label_env_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    />
                <Spinner
                    android:id="@+id/environment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/label_env_select"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
